--- a/public/css/AusGlobeViewer.css
+++ b/public/css/AusGlobeViewer.css
@@ -283,11 +283,11 @@ a.ausglobe-title-menuItem:hover {
     position: relative;
     border: 1px solid gray;
     width: 64px;
-    height: 64px;
+    height: 35px;
     left: 0;
-    font-size: 9.5pt;
+    font-size: 10.5pt;
     background-color: rgba(0, 0, 0, 0.65);
-    line-height: 30px;
+    line-height: 35px;
     cursor: pointer;
     fill: #2EA1C3;
     margin-top: 20px;
@@ -311,20 +311,20 @@ a.ausglobe-title-menuItem:hover {
     fill: #fff;
 }
 
-.ausglobe-panel-button-image {
+.ausglobe-panel-button-label {
     display: inline-block;
     position: relative;
-    left: 16px;
-    top: 16px;
-    width: 32px;
-    height: 32px;
+    left: 0;
+    top: 0;
+    width: 64px;
+    height: 35px;
+    color: #66CCFF;
+    font-weight: bold;
+    text-align: center;
 }
 
-.ausglobe-panel-button-label {
-    position: relative;
-    left: 25px;
+.ausglobe-panel-button:hover .ausglobe-panel-button-label {
     color: #fff;
-    font-size: 11pt;
 }
 
 .ausglobe-panel {
