--- a/public/css/AusGlobeViewer.css
+++ b/public/css/AusGlobeViewer.css
@@ -190,13 +190,19 @@ li {
     bottom: 10px;
     color: #aaaaaa;
     vertical-align: bottom;
-    min-width: 200px;
+    min-width: 350px;
+}
+
+.ausglobe-title-position {
+    position: absolute;
+    right: 0;
+    bottom: 20px;
 }
 
 .ausglobe-title-scale {
     position: absolute;
     right: 0;
-    bottom: 20px;
+    bottom: 0;
 }
 
 .ausglobe-title-scale-label {
