--- a/public/css/AusGlobeViewer.css
+++ b/public/css/AusGlobeViewer.css
@@ -13,6 +13,14 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .fullWindow {
     position: absolute;
     top: 0;
@@ -627,6 +635,17 @@ a.ausglobe-title-menuItem:hover {
     vertical-align: middle;
 }
 
+.ausglobe-info-baseUrl {
+    padding: 10px;
+    background-color: #F2F2F2;
+    border: 1px solid #CCCCCC;
+}
+
+.ausglobe-info-table {
+    background-color: #E3E3E3;
+    padding: 5px;
+}
+
 .ausglobe-share {
     display: inline-block;
     width: 500px;
@@ -688,7 +707,7 @@ a.ausglobe-title-menuItem:hover {
 }
 
 .ausglobe-info-header {
-
+    border-bottom: 1px solid #9A9A9B;
 }
 
 .ausglobe-info-content {
@@ -709,16 +728,17 @@ a.ausglobe-title-menuItem:hover {
 }
 
 .ausglobe-info h1, .ausglobe-share h1, .ausglobe-services h1, .ausglobe-message h1 {
-    font-size: 16px;
+    font-size: 12pt;
     padding: 15px;
     font-weight: bold;
     margin: 0;
 }
 
 .ausglobe-info h2, .ausglobe-share h2, .ausglobe-services h2 {
-    font-size: 10pt;
-    font-weight: bold;
+    font-size: 12pt;
+    font-weight: normal;
     margin: 0;
+    padding-bottom: 10px;
 }
 
 .ausglobe-info h3, .ausglobe-share h3, .ausglobe-services h3 {
@@ -727,6 +747,11 @@ a.ausglobe-title-menuItem:hover {
 
 .ausglobe-info hr, .ausglobe-share hr, .ausglobe-services hr {
     margin-bottom: 20px;
+}
+
+.ausglobe-info-description {
+    font-size: 10pt;
+    font-weight: normal;
 }
 
 .ausglobe-info-field {
@@ -870,22 +895,6 @@ a.ausglobe-title-menuItem:hover {
     text-shadow: 0px 0px 1px #000000;
     padding: 5px;
     font-family: "Open Sans", sans-serif;
-}
-
-#cesiumContainer .cesium-widget-credits a {
-    text-decoration: none;
-}
-
-#cesiumContainer .cesium-widget-credits a:link {
-    color: white;
-}
-
-#cesiumContainer .cesium-widget-credits a:visited {
-    color: white;
-}
-
-#cesiumContainer .cesium-widget-credits a:hover {
-    text-decoration: underline;
 }
 
 #cesiumContainer .cesium-credit-imageContainer {
