--- a/src/Styles/DataCatalog.less
+++ b/src/Styles/DataCatalog.less
@@ -61,3 +61,9 @@
 .data-catalog-icon-holder {
     display: table-cell;
 }
+
+.data-catalog-enabled-item {
+    font-weight: normal;
+    color: @highlight-color;
+    fill: @highlight-color;
+}
