--- a/src/Views/DataCatalogTab.html
+++ b/src/Views/DataCatalogTab.html
@@ -3,9 +3,9 @@
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
             <div clas="data-catalog-member-top-row">
                 <div class="data-catalog-icon-holder">
-                    <div class="data-catalog-icon clickable" data-bind="click: toggleEnabled, cesiumSvgPath: { path: isEnabled ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }"></div>
+                    <div class="data-catalog-icon clickable" data-bind="click: toggleEnabled, cesiumSvgPath: { path: isEnabled ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'data-catalog-enabled-item': isEnabled }"></div>
                 </div>
-                <div class="data-catalog-item-label" data-bind="text: name"></div>
+                <div class="data-catalog-item-label" data-bind="text: name, css: { 'data-catalog-enabled-item': isEnabled }"></div>
             </div>
         </div>
     <!-- /ko -->
