--- a/src/Views/DataCatalogTab.html
+++ b/src/Views/DataCatalogTab.html
@@ -8,7 +8,7 @@
                 <div class="data-catalog-item-label data-catalog-enabled-item clickable" data-bind="visible: isEnabled, text: name, click: zoomTo"></div>
                 <div class="data-catalog-item-label" data-bind="visible: !isEnabled, text: name"></div>
                 <div class="data-catalog-item-info">
-                    <div class="data-catalog-icon clickable" data-bind="click: $root.showInfo.bind($root), cesiumSvgPath: { path: $root.svgInfo, width: 32, height: 32 }"></div>
+                    <div class="data-catalog-icon clickable" data-bind="click: $root.showInfo.bind($root), cesiumSvgPath: { path: $root.svgInfo, width: 18, height: 18, 'fill-rule': 'evenodd' }"></div>
                 </div>
             </div>
         </div>
